--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,23 @@
-# Add your Google Analytics ID here
-# Get your ID from https://analytics.google.com/
-NEXT_PUBLIC_GA_ID=G-XXXXXXXXXX
+# Environment variables for SpeakHindi
+
+# Google Analytics
+NEXT_PUBLIC_GA_MEASUREMENT_ID=G-XXXXXXXXXX
+
+# Contentful CMS
+CONTENTFUL_SPACE_ID=your_space_id_here
+CONTENTFUL_ACCESS_TOKEN=your_delivery_api_token_here
+CONTENTFUL_PREVIEW_TOKEN=your_preview_api_token_here
+
+# Video Provider (mux or vimeo)
+NEXT_PUBLIC_VIDEO_PROVIDER=vimeo
+
+# Mux Configuration (if using Mux)
+MUX_TOKEN_ID=your_mux_token_id
+MUX_TOKEN_SECRET=your_mux_token_secret
+
+# Vimeo Configuration (if using Vimeo)
+# Note: No access token needed for public embeds
+VIMEO_ACCESS_TOKEN=your_vimeo_access_token_optional
+
+# Feature Flags
+USE_CONTENTFUL=false
