--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@mux/mux-player-react": "^3.9.1",
+    "@supabase/supabase-js": "^2.39.0",
+    "@vimeo/player": "^2.30.1",
+    "contentful": "^11.9.0",
     "next": "^14.0.0",
-    "@supabase/supabase-js": "^2.39.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "typescript": "^5.3.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.54.0",
-    "eslint-config-next": "^14.0.0"
+    "eslint-config-next": "^14.0.0",
+    "typescript": "^5.3.0"
   }
 }
